--- a/client/src/components/galleryItem/galleryItem.css
+++ b/client/src/components/galleryItem/galleryItem.css
@@ -1,9 +1,74 @@
 .galleryItem {
   display: flex;
+  position: relative;
 }
 
 .galleryItem img {
   width: 100%;
   object-fit: cover;
   border-radius: 16px;
+}
+
+.overlay,
+.saveButton,
+.overlayIcons {
+  display: none;
+}
+
+.galleryItem:hover .overlay {
+  display: block;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.26);
+  border-radius: 15px;
+}
+
+.galleryItem:hover .overlayIcons {
+  position: absolute;
+  bottom: 16px;
+  right: 16px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.overlayIcons button {
+  width: 32px;
+  height: 32px;
+  border-radius: 100%;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  cursor: pointer;
+}
+
+.galleryItem:hover .saveButton {
+  display: block;
+  background-color: red;
+  color: white;
+  border-radius: 24px;
+  padding: 14px 18px;
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
+  width: max-content;
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  border: none;
+}
+
+.overlayIcons button img {
+  width: 20px;
+  height: 20px;
+}
+
+.overlayIcons button:hover {
+  background-color: #f1f1f1;
 }
