--- a/client/src/components/sideBar/sideBar.css
+++ b/client/src/components/sideBar/sideBar.css
@@ -8,6 +8,7 @@
   position: sticky;
   border-right: 1px solid #e9e9e9;
   top: 0;
+  /* flex-shrink: 0; */
 }
 
 .top {
@@ -38,3 +39,9 @@
   margin-bottom: 25px;
   /* gap: 50px; */
 }
+
+/* @media (max-width: 768px) {
+  .bottom {
+    margin-bottom: 100px;
+  }
+} */
