--- a/client/src/components/gallery/gallery.css
+++ b/client/src/components/gallery/gallery.css
@@ -4,6 +4,7 @@
 
 .gallery {
   display: grid;
+  width: 100%;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-auto-rows: 10px;
   gap: 16px;
