--- a/client/src/components/gallery/gallery.css
+++ b/client/src/components/gallery/gallery.css
@@ -6,7 +6,7 @@
   display: grid;
   width: 100%;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-auto-rows: 10px;
+  align-items: start;
   gap: 16px;
   /* width: 100%;
   max-width: 100%; */
