--- a/client/src/components/postInteractions/postInteractions.css
+++ b/client/src/components/postInteractions/postInteractions.css
@@ -1,60 +1,39 @@
 .postInteractions {
   display: flex;
-  gap: 180px;
-  /* align-items: center; */
-  /* overflow: hidden; */
-}
-.postInteractions .left {
-  justify-content: start;
-  gap: 25px;
-}
-.postInteractions .left img {
-  width: 25px;
-  height: 25px;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  flex-wrap: nowrap;
+  gap: 16px;
 }
 
-.saveButtonPost {
-  display: block;
-  background-color: red;
-  color: rgb(255, 255, 255);
-  border-radius: 24px;
-  padding: 14px 18px;
-  font-weight: bold;
-  font-size: 16px;
+.interactionIcons {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  font-weight: 500;
+  flex-shrink: 1;
+}
+
+.interactionIcons img,
+.interactionIcons svg {
   cursor: pointer;
+  width: 20px;
+  height: 20px;
+}
+
+.postInteractions button {
+  background-color: #e50829;
+  color: white;
   border: none;
+  border-radius: 24px;
+  padding: 12px 20px;
+  font-weight: bold;
+  cursor: pointer;
+  white-space: nowrap;
+  flex-shrink: 0;
 }
 
-.saveButtonPost:hover {
-  background-color: darkred;
+.postInteractions button:hover {
+  background-color: #a7021b;
 }
-
-@media (max-width: 768px) {
-  .postInteractions {
-    /* gap: 20px; */
-    justify-content: start; /* flex-wrap: wrap;
-    overflow-x: hidden;
-    overflow-y: hidden; */
-    /* margin-top: 10px; */
-  }
-
-  .saveButtonPost {
-    display: none;
-  }
-
-  .postInteractions .left {
-    display: flex;
-    justify-content: center;
-    margin-right: 0px;
-    gap: 20px;
-    align-items: center;
-  }
-
-  .postInteractions .left img {
-    width: 25px;
-    height: 25px;
-  }
-}
-/* .react:hover img {
-  color: darkred;
-} */
