--- a/client/src/components/sideBar/sideBar.css
+++ b/client/src/components/sideBar/sideBar.css
@@ -28,8 +28,9 @@
 
 .logo {
   margin-top: 15px;
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
+  background-color: none;
 }
 
 .bottom {
